violin with "all races" and trying to fix timeline responsiveness

--- a/index.html
+++ b/index.html
@@ -69,17 +69,18 @@
         <div class="tooltip"></div>
 
         <map name="imagem-map">
-            <area shape="rect" coords="0,400,150,600" alt="Área 1" class="tooltip-area" title="1895: Provavelmente ano da primeira corrida automobilítica, que durou 48h em uma pista de 1200km">
-            <area shape="rect" coords="220,550,370,750" alt="Área 2" class="tooltip-area" title="1901: Primeiro Grand Prix, a competição mais importante da atualidade no automobilismo.">        
+            <area shape="rect" coords="0px,400px,150px,600px" alt="Área 1" class="tooltip-area" title="1895: Provavelmente ano da primeira corrida automobilítica, que durou 48h em uma pista de 1200km">
+            <area shape="rect" coords="200,550,350,750" alt="Área 2" class="tooltip-area" title="1901: Primeiro Grand Prix, a competição mais importante da atualidade no automobilismo.">        
             <area shape="rect" coords="330,120,500,300" alt="Área 3" class="tooltip-area" title="1950: Criação oficial da Formula 1 pela FIA (Federação Internacional de Automobilismo). O vencedor da primeira corrida foi o italiano Nino Farina, pela Alfa Romeo.">        
             <area shape="rect" coords="620,90,770,270" alt="Área 4" class="tooltip-area" title="1972: Um brasileiro é campeão da Fórmula 1 pela primeira vez. Emerson Fittipaldi vence correndo pela Lotus e 2 anos depois pela MacLaren.">        
-            <area shape="rect" coords="760,520,910,710" alt="Área 5" class="tooltip-area" title="1977: A Renault desenvolve os motores turbo, que potencializavam as velocidades alcançadas mas eventualmente causaram acidentes fatais, então foram proibidos em 1988.">        
-            <area shape="rect" coords="940,350,1090,550" alt="Área 6" class="tooltip-area" title="1994: Morre Ayrton Senna. Sensação brasileira, que conquistou 3 títulos e carregava a esperança do país no esporte. O acidente fatal ocorreu durante uma corrida do GrandPrix, e foi televisionado enquanto o país parava para assistir.">        
-            <area shape="rect" coords="970,20,1130,220" alt="Área 7" class="tooltip-area" title="2023: Atualidade. Nos últimos anos, destacou-se a Mercedes, consagrando 7 vitórias consecutivas entre 2014 e 2020, 6 delas com a direção de Lewis Hamilton, inglês considerado o melhor piloto da atualidade. No ano de 2023, a competição mundial ainda está em andamento, mas tudo aponta que a RedBull desenvolveu um carro com potencial enorme de ser campeão!">        
+            <area shape="rect" coords="650,420,800,610" alt="Área 5" class="tooltip-area" title="1977: A Renault desenvolve os motores turbo, que potencializavam as velocidades alcançadas mas eventualmente causaram acidentes fatais, então foram proibidos em 1988.">        
+            <area shape="rect" coords="920,350,1070,550" alt="Área 6" class="tooltip-area" title="1994: Morre Ayrton Senna. Sensação brasileira, que conquistou 3 títulos e carregava a esperança do país no esporte. O acidente fatal ocorreu durante uma corrida do GrandPrix, e foi televisionado enquanto o país parava para assistir.">        
+            <area shape="rect" coords="970,20,1380,220" alt="Área 7" class="tooltip-area" title="2023: Atualidade. Nos últimos anos, destacou-se a Mercedes, consagrando 7 vitórias consecutivas entre 2014 e 2020, 6 delas com a direção de Lewis Hamilton, inglês considerado o melhor piloto da atualidade. No ano de 2023, a competição mundial ainda está em andamento, mas tudo aponta que a RedBull desenvolveu um carro com potencial enorme de ser campeão!">        
 
         
         </map>
     </div>
+
 
 
     <section id="engine">
@@ -177,6 +178,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <!--personal js-->
+    <!--<script src="static/js/imageMapResizer.min.js"></script>-->
     <script src="static/js/scroll.js"></script>
     <script src="static/js/tooltip_historia.js"></script>
     <script src="static/js/style.js"></script>
