--- a/pitStop.html
+++ b/pitStop.html
@@ -76,6 +76,7 @@
                             <a class="dropdown-item dcorrida" href="#corrida">British Grand Prix</a>
                             <a class="dropdown-item dcorrida" href="#corrida">Austrian Grand Prix</a>
                             <a class="dropdown-item dcorrida" href="#corrida">French Grand Prix</a>
+                            <a class="dropdown-item dcorrida" href="#corrida">Todas</a>
 
                         </div>
                       </div>
