some details and fixes

--- a/pitStop.html
+++ b/pitStop.html
@@ -119,23 +119,28 @@
                     </div>
                   </div>
 
-                  <div class="dark-article">
 
                   <div class="row">
                     <div class="main-left col-md-6">
                       <br>
+                      <br> 
+                      <br> 
+
                       <br>
-                      <h1> Recorde Mundial de PitStop</h1>
-                      <p> Veja ao lado o recorde mundial em tempo de PitStop absoluto, isto é, a contar do momento em que o piloto para o carro.
+                      <h1 class="alignright"> Recorde Mundial de PitStop</h1>
+                      <p class="alignright"> Veja ao lado o recorde mundial em tempo de PitStop absoluto, isto é, a contar do momento em que o piloto para o carro.
                         O recorde é da equipe Red Bull, com 1.82 segundos! Esse tempo provavelmente é menor que o tempo que você levou para ler esse parágrafo.</p>
                       </p>        
                       <br>     
                       <br>
-                      <img id="car" src="./images/white_car.png" width="400">
 
                     </div>
                     <div class="main-right col-md-6">
                       <br>
+                      <br> 
+                      <br> 
+
+
                       <iframe width="450" height="315" src="https://www.youtube.com/embed/wsCriICZ-nA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>                    </div >
                       <br> 
                       <br> 
@@ -143,7 +148,6 @@
                     </div>
                   </div>
 
-                </div>
 
 
             </div>
