--- a/barRacePilot.html
+++ b/barRacePilot.html
@@ -46,9 +46,9 @@
                         <div style="text-align: center; margin-left: 15%; margin-right: 15%; position: relative; top: -65px; color: #999999">
                             <h4> Use o botão de replay para reiniciar a animação do gráfico. </h4>
                         </div>
-                        <div style="text-align: center; position: relative; top: -60px" id="observablehq-viewof-replay-2a609a0e"></div>
+                        <div style="text-align: center; position: relative; top: -60px" id="observablehq-viewof-replay-64334f6a"></div>
                         <div class="d-flex justify-content-center">
-                            <div style="position: relative; top: -40px; width: 75%;" id="observablehq-chart-2a609a0e"></div>
+                            <div style="position: relative; top: -40px; width: 75%;" id="observablehq-chart-64334f6a"></div>
                         </div>
                     </div>
                 </div>
@@ -64,11 +64,12 @@
 
 </body>
 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
 <script type="module">
-    import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
-    import define from "https://api.observablehq.com/d/857a9e9f7fe9386b@669.js?v=3";
-    new Runtime().module(define, name => {
-    if (name === "viewof replay") return new Inspector(document.querySelector("#observablehq-viewof-replay-2a609a0e"));
-    if (name === "chart") return new Inspector(document.querySelector("#observablehq-chart-2a609a0e"));
-    });
+import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
+import define from "https://api.observablehq.com/d/857a9e9f7fe9386b@694.js?v=3";
+new Runtime().module(define, name => {
+  if (name === "viewof replay") return new Inspector(document.querySelector("#observablehq-viewof-replay-64334f6a"));
+  if (name === "chart") return new Inspector(document.querySelector("#observablehq-chart-64334f6a"));
+});
 </script>
