--- a/barRaceRaces.html
+++ b/barRaceRaces.html
@@ -46,9 +46,9 @@
                         <div style="text-align: center; margin-left: 15%; margin-right: 15%; position: relative; top: -65px; color: #999999">
                             <h4> Use o botão de replay para reiniciar a animação do gráfico. </h4>
                         </div>
-                        <div style="text-align: center; position: relative; top: -60px" id="observablehq-viewof-replay-19fdfdaf"></div>
+                        <div style="text-align: center; position: relative; top: -60px" id="observablehq-viewof-replay-6806a5d1"></div>
                         <div class="d-flex justify-content-center">
-                            <div style="position: relative; top: -40px; width: 75%;" id="observablehq-chart-19fdfdaf"></div>
+                            <div style="position: relative; top: -40px; width: 75%;" id="observablehq-chart-6806a5d1"></div>
                         </div>
                     </div>
                 </div>
@@ -64,11 +64,12 @@
 
 </body>
 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
 <script type="module">
-    import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
-    import define from "https://api.observablehq.com/d/da09e876311ba85e@686.js?v=3";
-    new Runtime().module(define, name => {
-    if (name === "viewof replay") return new Inspector(document.querySelector("#observablehq-viewof-replay-19fdfdaf"));
-    if (name === "chart") return new Inspector(document.querySelector("#observablehq-chart-19fdfdaf"));
-    });
+import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
+import define from "https://api.observablehq.com/d/da09e876311ba85e@1108.js?v=3";
+new Runtime().module(define, name => {
+  if (name === "viewof replay") return new Inspector(document.querySelector("#observablehq-viewof-replay-6806a5d1"));
+  if (name === "chart") return new Inspector(document.querySelector("#observablehq-chart-6806a5d1"));
+});
 </script>
