--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </section>
 
     <div id ="pista_historia">
-        <img src="images/historia_flags.svg" width="1380px" usemap="#imagem-map">
+        <img src="images/historia_flags.svg" id = "hist-image" usemap="#imagem-map">
         <div class="tooltip"></div>
 
         <map name="imagem-map">
