--- a/timeSerie.html
+++ b/timeSerie.html
@@ -41,7 +41,7 @@
                         <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Ano
                         </button>
-                        <div class="dropdown-menu" id="dropdown-dyear" role="menu" style="max-height: 280px; overflow-y: auto;">
+                        <div class="dropdown-menu" id="dropdown-dyear" role="menu" style="max-height: 280px; overflow-y: auto; ;">
 
                         </div>
                       </div>
@@ -50,7 +50,7 @@
                         <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Piloto
                         </button>
-                        <div class="dropdown-menu" id="dropdown-dpilot" role="menu" style="max-height: 280px; overflow-y: auto;">
+                        <div class="dropdown-menu" id="dropdown-dpilot" role="menu" style="max-height: 280px; overflow-y: auto; overflow-x: hidden">
                         </div>
                       </div>
 
@@ -78,7 +78,7 @@
             </div>
             <div id="tooltip" class="tooltip" title="oi"></div>
 
-        <script src="static/js/time_serie.js"></script>
+        <script src="static/js/temp.js"></script>
         <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
