--- a/timeSerie.html
+++ b/timeSerie.html
@@ -59,15 +59,15 @@
                         <div class="card w-100">
                             <div class="card-body">
                               <h5 class="card-title">Série temporal</h5>
-                              <p class="card-text">Selecione um ano e em seguida um piloto para visualizar sua performance naquela temporada!</p>
+                              <p class="card-text">Selecione um ano e adicione pilotos para comparar suas performances!</p><p class="card-text">A linha branca indica uma temporada perfeita.</p>
                             </div>
                         </div>
                         <br>
                         <div class="card w-100">
-                            <div class="card-body">
+                            <div class="card-body" id="card-body-pilotos">
                               <h5 class="card-title">Temporada: <span id="year-value">2022</span></h5>
-                              <p class="card-text-b">Piloto: <span id="driver-value">Max Verstappen</span> </p>
-                              <p class="card-text"></p>
+                              <p class="card-text-b">Pilotos:</p>
+                              <p class="card-text-b war"><span id="driver-value">Selecione um piloto</span></p>
                             </div>
                         </div>
                         <br>
