--- a/viz.html
+++ b/viz.html
@@ -170,7 +170,7 @@
         <div>   
             <p style="width: 300px; text-align: right; color: #FFFFFF"> <a class="linkreference" href="https://www.f1-telemetry.net/information">F1 Telemetry</a><br><br></p>
             <p style="width: 300px; text-align: right; color: #FFFFFF"> <a class="linkreference" href="https://www.kaggle.com/datasets/rohanrao/formula-1-world-championship-1950-2020">Kaggle - Formula 1 World Championship</a><br><br></p>
-            <h3 class="alignright"><a href="about.html" class="largepill"><em>Sobre o projeto</em></a></h3>
+            <h3 class="alignright"><a href="index.html" class="largepill"><em>Sobre o projeto</em></a></h3>
 
         </div>
     </footer>
