--- a/barRaceRaces.html
+++ b/barRaceRaces.html
@@ -22,7 +22,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <a href="index.html"><img src="images/title.svg" width="100"></a> 
+                <a href="viz.html"><img src="images/title.svg" width="100"></a> 
             </div>
 
             <div class="col alignright button-container">
