--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <a href="index.html"><img src="images/title.svg" width="100"></a> 
+                    <a href="viz.html"><img src="images/title.svg" width="100"></a> 
                 </div>
                 <div class="main-right col-md-8">
                     <br>
