--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <br>
                 <h6> <b> Video teaser:</b> </h6>
 
-                <iframe width="740" height="315" src="https://www.youtube.com/embed/_hdqMOTFCjU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="740" height="315" src="https://www.youtube.com/watch?v=CH1NhpFIRvE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 
                 <br>
                 <br>
